<resources>
    <string name="app_name">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="mac">MAC</string>
    <string name="share">SHARE</string>
    <string name="service_app">Service app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="or">or</string>
    <string name="continue_with_google_account">Continue with Google account</string>
    <string name="sign_in">SIgn In</string>
    <string name="invalid_mail">Email is invalid</string>
</resources>